[package]
name = "ekko-mongodb"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
mongodb = { version = "3", default-features = false, features = ["bson-2", "rustls-tls", "compat-3-3-0"] }
bson = { version = "2", features = ["serde_with"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
